--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
-# Extras que no se usan. Solo prevencion
-.vscode/
-npm/
-pnpm/
-npx/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Librerias y datos privados
-.env
-node_modules/
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
