--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "invexpress",
   "version": "1.0.0",
   "description": "Backend para el control de los usuarios. Los datos de estos mismos como informacion de productos permanece segura, pues el backend solo guarda el nombre de usuario, y listo.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -17,13 +17,12 @@
   },
   "homepage": "https://github.com/RDev00/invexpress#readme",
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.4",
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10",
-    "path": "^0.12.7"
+    "bcrypt": "6.0.0",
+    "cors": "2.8.5",
+    "dotenv": "17.2.3",
+    "express": "5.1.0",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.19.1",
+    "nodemon": "3.1.10"
   }
 }
