--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-react": "^5.0.4",
     "react": "19.2.0",
