--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-react": "^5.0.4",
     "qr-scanner": "1.4.2",
+    "qrcode.react": "4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-qr-reader": "3.0.0-beta-1",
     "react-router": "7.9.3",
     "react-router-dom": "7.9.3",
     "tailwindcss": "^4.1.14"
