--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "invexpress",
   "private": true,
-  "version": "beta",
+  "version": "1.0.0",
   "description": "Backend para el control de los usuarios. Los datos de estos mismos como informacion de productos permanece segura, pues el backend solo guarda el nombre de usuario, y listo.",
   "type": "module",
   "scripts": {
@@ -26,8 +26,11 @@
     "@mdi/react": "^1.6.1",
     "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-react": "^5.0.4",
+    "qr-scanner": "1.4.2",
+    "qrcode.react": "4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-qr-reader": "3.0.0-beta-1",
     "react-router": "7.9.3",
     "react-router-dom": "7.9.3",
     "tailwindcss": "^4.1.14"
