--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "invexpress",
-  "version": "3.0.0",
+  "version": "3.0.0b",
   "description": "Backend para el control de los usuarios. Los datos de estos mismos como informacion de productos permanece segura, pues el backend solo guarda el nombre de usuario, y listo.",
   "main": "index.js",
   "scripts": {
